--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "db-migrate-mysql": "^2.2.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
@@ -23,6 +25,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "express-swagger-generator": "^1.1.17",
     "nodemon": "^2.0.20",
+    "prettier": "2.7.1",
     "tslint": "^6.1.3",
     "typescript": "^4.8.4"
   }
