--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "express-swagger-generator": "^1.1.17",
