--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/multer": "^1.4.7",
     "express-swagger-generator": "^1.1.17",
     "nodemon": "^2.0.20",
     "prettier": "2.7.1",
