--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,14 @@
-DB_HOST=REPLACE_HOST_NAME
-DB_NAME=REPLACE_DB_NAME
-DB_USER=REPLACE_DB_USER
-DB_PASSWORD=REPLACE_DB_PASSWORD
-TOKEN_KEY=REPLACE_JWT_HASH_TOKEN_AS_RANDOM_STRING
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=test
+DB_USER=root
+DB_PASSWORD=1234
+TOKEN_KEY='string'
+
+MYSQLDB_USER=root
+MYSQLDB_ROOT_PASSWORD=1234
+MYSQLDB_DATABASE=test
+MYSQLDB_LOCAL_PORT=3307
+MYSQLDB_DOCKER_PORT=3306
+
+NODE_DOCKER_PORT=8080
