--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
           key: ${{secrets.SSH_KEY}} # Private or public key of the server
           username: ${{ secrets.SSH_USERNAME }} # User of the server you want to ssh into
           script: |
-            mkdir -p app
-            cd ./app && git -C app pull || git clone git@github.com:KosolapovR/food-recipes-cms-be.git app && cd ./app
+            cd ./app
+            git pull
             docker-compose up
             echo 'Deployment successful to digital ocean'
