--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,5 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }} # User of the server you want to ssh into
           script: |
             cd ./app
-            git pull
-            docker-compose up
+            git pull && docker-compose up
             echo 'Deployment successful to digital ocean'
