--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,6 @@ jobs:
           key: ${{secrets.SSH_KEY}} # Private or public key of the server
           username: ${{ secrets.SSH_USERNAME }} # User of the server you want to ssh into
           script: |
-            cd ./app
-            git pull && docker-compose up
+            git -C app pull || git clone git@github.com:KosolapovR/food-recipes-cms-be.git app
+            docker-compose up
             echo 'Deployment successful to digital ocean'
