--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,5 +16,6 @@ jobs:
           script: |
             git -C app pull || git clone git@github.com:KosolapovR/food-recipes-cms-be.git app
             cd ./app
+            docker-compose build
             docker-compose up
             echo 'Deployment successful to digital ocean'
