--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/multer": "^1.4.7",
+    "@types/node": "18.11.9",
     "express-swagger-generator": "^1.1.17",
     "nodemon": "^2.0.20",
     "prettier": "2.7.1",
+    "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "typescript": "^4.8.4"
   }
