--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "db-migrate up",
     "build": "tsc",
+    "format": "prettier .",
     "start": "npm run migrate && npm run build && node ./dist/index.js",
     "dev": "npm run migrate && npx nodemon src/index.ts"
   },
