--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "format": "prettier .",
     "start": "npm run migrate && npm run build && node ./dist/index.js",
-    "dev": "npm run migrate && npx nodemon src/index.ts"
+    "dev": "npm run migrate && npx nodemon src/index.ts",
+    "lint": "eslint ./src --ext .ts --fix --max-warnings=0"
   },
   "author": "Roman Kosolapov <kosolapov-r@bk.ru>",
   "license": "ISC",
@@ -28,10 +29,16 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/multer": "^1.4.7",
     "@types/node": "18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint": "^8.28.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-security": "^1.5.0",
     "express-swagger-generator": "^1.1.17",
     "nodemon": "^2.0.20",
     "prettier": "2.7.1",
