--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "pino-http": "^8.2.1",
+    "pino-pretty": "^9.1.1",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
