--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "migrate": "db-migrate up",
     "build": "tsc",
     "format": "prettier .",
-    "start": "npm run migrate && npm run build && node ./dist/index.js",
+    "start": "pm2 ./dist/index.js",
     "dev": "npm run migrate && npx nodemon src/index.ts",
+    "postinstall": "pm2 install typescript",
     "lint": "eslint ./src --ext .ts --fix --max-warnings=0"
   },
   "author": "Roman Kosolapov <kosolapov-r@bk.ru>",
@@ -44,8 +45,6 @@
     "express-swagger-generator": "^1.1.17",
     "nodemon": "^2.0.20",
     "prettier": "2.7.1",
-    "ts-node": "^10.9.1",
-    "tslint": "^6.1.3",
-    "typescript": "^4.8.4"
+    "tslint": "^6.1.3"
   }
 }
