--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "migrate": "db-migrate up",
     "build": "tsc",
     "format": "prettier .",
-    "start": "pm2 ./dist/index.js",
+    "start": "npm run migrate && pm2-runtime ./src/index.ts",
     "dev": "npm run migrate && npx nodemon src/index.ts",
     "postinstall": "pm2 install typescript",
     "lint": "eslint ./src --ext .ts --fix --max-warnings=0"
