--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "migrate": "db-migrate up",
     "build": "tsc",
     "format": "prettier .",
-    "start": "npm run migrate && npm run build && pm2-runtime ./dist/index.js",
+    "start": "npm run migrate && npm run build && node ./dist/index.js",
     "dev": "npm run migrate && npx nodemon src/index.ts",
     "lint": "eslint ./src --ext .ts --fix --max-warnings=0"
   },
