--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "express-swagger-generator": "^1.1.17",
     "nodemon": "^2.0.20",
     "prettier": "2.7.1",
-    "tslint": "^6.1.3"
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.8.4"
   }
 }
