--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cms-be",
-  "version": "1.2.1",
+  "version": "1.3.0-dev",
   "description": "CMS back-end for demo food recipes project",
   "main": "index.js",
   "scripts": {
